variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value x
x=0
^Variables:2: error: not found: value x
while (!estSurBiscuit){x=x+1;avance()}
                       ^Variables:4: error: not found: value x
recule(x)
       ^