variables.Variables.scala.code
x=0
while (!estSurBiscuit){x=x+1;avance()}
porteBiscuit()
recule(x)
poseBiscuit()